@@ -2,6 +2,7 @@ Passwordless Login 2.0.0
 --------------------------------------------------------------------------------
 - Removed cookie which remembers the last logged in user
 ~ Change plugin namespace
+~ Joomla 5 preparation: Use DatabaseInterface instead of DatabaseDriver
 ~ Joomla 5 preparation: Work around backwards incompatible changes in core plugin events
 + Support for passkeys (resident, synchronised authenticators)
 + Support for TouchID/FaceID on newer Apple mobile devices (iOS 15.4+)
